<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mareu.AddMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/addMeetingLinearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addMeetingCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:background="@color/grey"
                        android:minHeight="32dp"
                        android:autofillHints="Color"
                        tools:ignore="SpeakableTextPresentCheck"/>

                    <Spinner
                        android:id="@+id/spinner_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/grey"
                        android:minHeight="40dp"
                        tools:ignore="SpeakableTextPresentCheck"/>

                    <TextView
                        android:id="@+id/textView_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:background="@color/grey"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:hint="choisissez la date"
                        tools:ignore="SpeakableTextPresentCheck"/>

                    <TextView
                        android:id="@+id/textView_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:background="@color/grey"
                        android:ems="10"
                        android:minHeight="40dp"
                        android:hint="choisissez l'heure"
                        tools:ignore="SpeakableTextPresentCheck"/>

                    <EditText
                        android:id="@+id/editText_creator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:background="@color/grey"
                        android:minHeight="40dp"
                        android:hint="choisissez votre nom"/>

                    <EditText
                        android:id="@+id/editText_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:background="@color/grey"
                        android:minHeight="48dp"
                        android:hint="mail participant"/>

                    <Button
                        android:id="@+id/button_add_members"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add members"/>

                    <ListView class="androidx.appcompat.app.AlertController$RecycleListView"
                        android:id="@+id/listView_seeMembers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/button_add_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Save"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>