<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mareu.ListMeetingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/myAPPBAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId">

        <!--Filter CardView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/filterCardView"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--The following is the expandable portion whose
                visibility is initially set to 'gone'.-->
            <LinearLayout
                android:id="@+id/hidden_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textViewLieu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Filtrer des réunions par lieu" />

                <Spinner
                    android:id="@+id/spinner_room_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_margin="10dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/roomFilterBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:text="Filtrer par salle"/>

                <TextView
                    android:id="@+id/textViewFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Filtrer des réunions par date" />

                <TextView
                    android:id="@+id/textView_DateFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:hint="Veuillez choisir la date"
                    tools:ignore="SpeakableTextPresentCheck"/>

                <Button
                    android:id="@+id/dateFilterBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:text="Filtrer par Date " />

                <Button
                    android:id="@+id/fullListFilterBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="La liste complète" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_circle_red_24"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>