<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_filter_list_white_24"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>