...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_room_color"
        app:layout_constraintTop_toBottomOf="@+id/item_room_hour"
        app:layout_constraintVertical_bias="0.545" />

    <ImageButton
        android:id="@+id/item_delete_button"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
...
